# ethqr-gen

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_static.rs  dynamic_with_amount.rs  image_generation.rs
src/: crc.rs  error.rs  fields.rs  lib.rs
