[package]
name = "ethqr-gen"
version = "0.1.0"
edition = "2024"
description = "Ethiopian QR Code Payment Generator - EMVCo compliant QR codes for IPS ET"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dagregi/ethqr-gen"
keywords = ["qr", "payments", "ethiopia", "emvco", "fintech"]
categories = ["encoding", "finance"]

[dependencies]
image = { version = "0.25.6", optional = true }
qrcode = { version = "0.14.1" }
thiserror = "2.0.16"

[features]
default = []
qr-image = ["dep:image"]
